# my_ci_corehard

./: .travis.yml  CMakeLists.txt
build2/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello.vcxproj.filters
build2/Debug/: hello.ilk
build2/hello.dir/Debug/hello.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.write.1.tlog
build2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
tests/: test_hello.cpp
